--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,30 @@
 #container a {
   text-decoration: none;
 }
+
+ion-content ion-toolbar {
+  --background: translucent;
+}
+.toolbarCima {
+  height: 60px;
+}
+
+.img_perfil {
+  width: 100%;
+  height: 200px;
+}
+
+.icone_busca {
+  padding-right: 20px;
+  width: 30px;
+  height:
+   30px;
+}
+
+.button_toolbar {
+  width: 33.3%;
+  height: 40px;
+  background-color: white;
+  border: solid 0 1px 1px 0;
+ 
+}
